adjusted files directory

--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -13,7 +13,7 @@
 <html>
     <head>
         <title>Emmanuel Oluwasegun Adeyeye</title>
-        <link href="{% static '/css/main.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% staticfiles '/css/main.css' %}" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         
     </head>
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="card card-body h-100 border-info" id="profile-wrapper">
-                        <img id="profile-pic" src="{% static 'images/Shakes.jpeg' %}">
+                        <img id="profile-pic" src="{% staticfiles 'images/Shakes.jpeg' %}">
                         <br>
                         <h4>Adeyeye Emmanuel Oluwasegun</h4>
                         <p>A backend developer. I love coding and I'm open to collaborations.</p>
@@ -119,7 +119,7 @@
                     <h2>Proudly sponsored by:</h2>
                     <br>
                     <a href="https://hng.tech/">
-                    <img src="{% static 'images/brand-logo.jpg'%}" width="auto" height="auto" >
+                    <img src="{% staticfiles 'images/brand-logo.jpg'%}" width="auto" height="auto" >
                     </a>
                 </div>
             </div>
